<resources>
    <string name="app_name">LayoutTesting</string>
    <string name="light_bulb">Light Bulb</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="rand_info_text">Here I can tell you useless stuff</string>
    <string name="join_game">Join Game</string>
    <string name="create_game">Create Game</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="username">Username</string>
    <string name="statistics">Statistics</string>
    <string name="statistics_settings">Statistics Settings</string>
    <string name="join">Join</string>
    <string name="text_view_host">Host:</string>
    <string name="game_name_default_render">Game Name</string>
    <string name="game_map">Game Map</string>
    <string name="stuff">Stuff</string>
    <string name="game_name">Game Name</string>
    <string name="allowed_characters">Allowed Characters:</string>
    <string name="join_rights">Join Rights:</string>
    <string name="mPublic">public</string>
    <string name="mFriends">friends</string>
    <string name="mPrivate">private</string>
    <string name="cross">cross</string>
    <string name="fluffy">Fluffy</string>
    <string name="slime">Slime</string>
    <string name="ghost">Ghost</string>
    <string name="nox">Nox</string>
    <string name="map">Map</string>
    <string name="width">Width:</string>
    <string name="height">Height:</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="player_count">Player Count:</string>
    <string name="leave_game">Leave Game</string>
    <string name="text">Text</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="controls">Controls</string>
    <string name="sound">Sound</string>
    <string name="alert">Alert</string>
    <string name="language">Language</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="explanation_text">It\'s an Android thing that the BluetoothAdapter requires the location permission to perform device discovery. Don\'t ask me why, I got no idea... (For privacy concerned people: this code is open source, see in options).</string>
    <string name="explanation">Explanation</string>
    <string name="give_me">Give me!</string>
    <string name="expl_refuse">Don\'t want it</string>
    <string name="game_searching_info">Searching for games.</string>
    <string name="search_finished_info">Search finished.</string>
    <string name="empty_textView">-</string>
    <string name="start_game">Start Game</string>
    <string name="send">Send</string>
    <string name="lobby_chat">Lobby Chat</string>
    <string name="type_a_message">Type a message</string>
    <string name="character_name">CharacterName</string>
    <string name="fluffy_description">This describes Fluffy</string>
    <string name="slime_description">This describes Slime</string>
    <string name="ghost_description">This describes Ghost</string>
    <string name="nox_description">This describes Nox</string>
</resources>
