<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/activity_padding_normal"
                android:layout_gravity="start"
                android:layout_marginLeft="-55dp"
                android:layout_marginStart="-55dp"
                android:choiceMode="singleChoice"
                android:background="@android:color/white">

    <Space
        android:id="@+id/space_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <Button
        android:id="@+id/button_profile_cancel"
        android:text="@string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/space_profile"
        android:layout_alignStart="@+id/space_profile"
        android:layout_marginLeft="@dimen/activity_margin_normal"
        android:layout_marginStart="@dimen/activity_margin_normal"/>

    <Button
        android:id="@+id/button_profile_join"
        android:text="@string/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/button_profile_cancel"
        android:layout_toStartOf="@+id/button_profile_cancel"
        android:layout_marginEnd="@dimen/activity_margin_normal"
        android:layout_marginRight="@dimen/activity_margin_normal"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_padding_normal"
        android:background="@color/colorPrimary"
        android:layout_above="@+id/button_profile_cancel"
        android:layout_margin="@dimen/activity_margin_normal">

        <TextView
            android:text="@string/text_view_host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView3"
            android:textSize="18sp"
            android:paddingBottom="@dimen/activity_padding_normal"
            android:paddingEnd="@dimen/activity_padding_normal"
            android:paddingRight="@dimen/activity_padding_normal"
            android:paddingTop="@dimen/activity_padding_normal"
            android:paddingLeft="40dp"
            android:paddingStart="40dp"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView"/>

        <TextView
            android:text="@string/game_name_default_render"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/textView2"
            android:textSize="24sp"
            android:textStyle="normal|bold"
            android:paddingLeft="@dimen/activity_padding_normal"
            android:paddingRight="@dimen/activity_padding_normal"
            android:paddingStart="@dimen/activity_padding_normal"
            android:layout_toLeftOf="@+id/imageView"
            android:layout_toStartOf="@+id/imageView"
            android:textColor="@android:color/black"/>

        <ImageView
            app:srcCompat="@drawable/test_map_3"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:id="@+id/imageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:contentDescription="@string/game_map"/>

    </RelativeLayout>

</RelativeLayout>