<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinatorLayout_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <ImageView
            android:id="@+id/imageView_main_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_launcher"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:contentDescription="@string/light_bulb"
            android:alpha="0.9"/>

        <ImageButton
            android:id="@+id/imageButton_main_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_settings_black_36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:background="@color/transparency"
            android:contentDescription="@string/settings"
            android:layout_margin="@dimen/activity_margin_normal"/>

        <ImageButton
            android:id="@+id/imageButton_main_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_account_box_black_36dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="@color/transparency"
            android:contentDescription="@string/profile"
            android:layout_margin="@dimen/activity_margin_normal"/>

        <Space
            android:id="@+id/space_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"/>

        <mobile.data.usage.spyspyyou.layouttesting.ui.views.SquareImageButton
            android:id="@+id/imageButton_main_friend_list"
            app:srcCompat="@drawable/ic_group_black_48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@id/space_main"
            android:layout_alignEnd="@id/space_main"
            android:background="@drawable/background_button"
            android:layout_marginBottom="@dimen/activity_margin_big"
            android:layout_marginEnd="@dimen/activity_margin_big"
            android:layout_marginLeft="@dimen/activity_margin_big"
            android:layout_marginRight="@dimen/activity_margin_big"
            android:layout_marginStart="@dimen/activity_margin_big"
            android:layout_marginTop="@dimen/activity_margin_normal"/>

        <mobile.data.usage.spyspyyou.layouttesting.ui.views.SquareImageButton
            android:id="@+id/imageButton_main_connections"
            app:srcCompat="@drawable/ic_bluetooth_searching_black_48dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_margin_big"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_toRightOf="@id/space_main"
            android:layout_toEndOf="@id/space_main"
            android:background="@drawable/background_button"/>

        <ImageButton
            android:id="@+id/imageButton_main_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_create_black_48dp"
            android:background="@drawable/background_button"
            android:padding="@dimen/activity_padding_normal"
            android:layout_above="@id/imageButton_main_friend_list"
            android:layout_alignLeft="@id/imageButton_main_friend_list"
            android:layout_alignStart="@id/imageButton_main_friend_list"
            android:contentDescription="@string/create_game"
            android:layout_toStartOf="@id/imageButton_main_settings"
            android:layout_toLeftOf="@id/imageButton_main_settings"
            android:layout_alignRight="@+id/imageButton_main_connections"
            android:layout_alignEnd="@+id/imageButton_main_connections"/>

        <ImageButton
            android:id="@+id/imageButton_main_join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_search_black_48dp"
            android:layout_above="@id/imageButton_main_create"
            android:background="@drawable/background_button"
            android:layout_marginBottom="@dimen/activity_margin_normal"
            android:padding="@dimen/activity_padding_normal"
            android:layout_marginTop="@dimen/activity_margin_normal"
            android:layout_alignLeft="@id/imageButton_main_create"
            android:layout_alignStart="@id/imageButton_main_create"
            android:contentDescription="@string/join_game"
            android:layout_alignRight="@id/imageButton_main_connections"
            android:layout_alignEnd="@id/imageButton_main_connections"
            android:scaleType="center"/>

        <TextView
            android:id="@+id/textView_main_info"
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/activity_padding_normal"
            android:layout_above="@id/imageButton_main_join"
            android:layout_alignLeft="@id/imageButton_main_join"
            android:layout_alignStart="@id/imageButton_main_join"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="@dimen/activity_margin_big"
            android:layout_marginLeft="@dimen/activity_margin_big"
            android:layout_marginRight="@dimen/activity_margin_big"
            android:layout_marginStart="@dimen/activity_margin_big"
            android:background="@drawable/background_text"
            android:textAlignment="center"
            android:gravity="center_vertical"
            android:textSize="24sp"
            android:textColor="@android:color/black"
            android:layout_below="@+id/imageButton_main_settings"/>

    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>
